<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp">


        <TextView
            android:id="@+id/text_view_userID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=" "
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/text_view_userID"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/username_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_username"
            android:layout_marginTop="15dp"
            android:text="@string/password_text" />

        <TextView
            android:id="@+id/text_view_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_password"
            android:layout_marginTop="15dp"
            android:text="@string/first_name_hint" />

        <TextView
            android:id="@+id/text_view_lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_fname"
            android:layout_marginTop="15dp"
            android:text="@string/last_name_hint" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>
